include-alinger add caption

--- a/_includes/aligner.html
+++ b/_includes/aligner.html
@@ -17,3 +17,9 @@
 </div>
 
 {% assign column = false %}
+
+{% if {{include.caption}}%}
+<p style="text-align : center;">
+    {{include.caption}}
+</p>
+{% endif %}
